machine-bindings/cartesi-machine-sys/src/headers/machine-c-api.h

/// \brief Processor state configuration
typedef struct {                        // NOLINT(modernize-use-using)
    uint64_t x[CM_MACHINE_X_REG_COUNT]; ///< Value of general-purpose registers
    uint64_t f[CM_MACHINE_F_REG_COUNT]; ///< Value of floating-point registers
    uint64_t pc;                        ///< Value of pc
    uint64_t fcsr;                      ///< Value of fcsr CSR
    uint64_t mvendorid;                 ///< Value of mvendorid CSR
    uint64_t marchid;                   ///< Value of marchid CSR
    uint64_t mimpid;                    ///< Value of mimpid CSR
    uint64_t mcycle;                    ///< Value of mcycle CSR
    uint64_t icycleinstret;             ///< Value of icycleinstret CSR
    uint64_t mstatus;                   ///< Value of mstatus CSR
    uint64_t mtvec;                     ///< Value of mtvec CSR
    uint64_t mscratch;                  ///< Value of mscratch CSR
    uint64_t mepc;                      ///< Value of mepc CSR
    uint64_t mcause;                    ///< Value of mcause CSR
    uint64_t mtval;                     ///< Value of mtval CSR
    uint64_t misa;                      ///< Value of misa CSR
    uint64_t mie;                       ///< Value of mie CSR
    uint64_t mip;                       ///< Value of mip CSR
    uint64_t medeleg;                   ///< Value of medeleg CSR
    uint64_t mideleg;                   ///< Value of mideleg CSR
    uint64_t mcounteren;                ///< Value of mcounteren CSR
    uint64_t menvcfg;                   ///< Value of menvcfg CSR
    uint64_t stvec;                     ///< Value of stvec CSR
    uint64_t sscratch;                  ///< Value of sscratch CSR
    uint64_t sepc;                      ///< Value of sepc CSR
    uint64_t scause;                    ///< Value of scause CSR
    uint64_t stval;                     ///< Value of stval CSR
    uint64_t satp;                      ///< Value of satp CSR
    uint64_t scounteren;                ///< Value of scounteren CSR
    uint64_t senvcfg;                   ///< Value of senvcfg CSR
    uint64_t ilrsc;                     ///< Value of ilrsc CSR
    uint64_t iflags;                    ///< Value of iflags CSR
} cm_processor_config;
/// \brief RAM state configuration
typedef struct {                // NOLINT(modernize-use-using)
    uint64_t length;            ///< RAM length
    const char *image_filename; ///< RAM image file name
} cm_ram_config;
/// \brief DTB state configuration
typedef struct {                // NOLINT(modernize-use-using)
    const char *bootargs;       ///< Bootargs to pass to kernel
    const char *init;           ///< Initialization commands to be executed as root on boot
    const char *entrypoint;     ///< Commands to execute the main application
    const char *image_filename; ///< ROM image file
} cm_dtb_config;
/// \brief Memory range configuration array
typedef struct { // NOLINT(modernize-use-using)
    cm_memory_range_config *entry;
    size_t count;
} cm_memory_range_config_array;
/// \brief TLB device state configuration
typedef struct {                // NOLINT(modernize-use-using)
    const char *image_filename; ///< TLB image file name
} cm_tlb_config;
/// \brief CLINT device state configuration
typedef struct {       // NOLINT(modernize-use-using)
    uint64_t mtimecmp; ///< Value of mtimecmp CSR
} cm_clint_config;
/// \brief HTIF device state configuration
typedef struct {          // NOLINT(modernize-use-using)
    uint64_t fromhost;    ///< Value of fromhost CSR
    uint64_t tohost;      ///< Value of tohost CSR
    bool console_getchar; ///< Make console getchar available?
    bool yield_manual;    ///< Make yield manual available?
    bool yield_automatic; ///< Make yield automatic available?
} cm_htif_config;
/// \brief Cmio state configuration
typedef struct {                           // NOLINT(modernize-use-using)
    bool has_value;                        ///< Represents whether the rest of the struct have been filled
    cm_memory_range_config rx_buffer;      ///< RX buffer memory range
    cm_memory_range_config tx_buffer;      ///< TX buffer memory range
} cm_cmio_config;
/// \brief Microarchitecture state configuration
typedef struct { // NOLINT(modernize-use-using)
    cm_uarch_processor_config processor;
    cm_uarch_ram_config ram;
} cm_uarch_config;
/// \brief Machine state configuration
typedef struct { // NOLINT(modernize-use-using)
    cm_processor_config processor;
    cm_ram_config ram;
    cm_dtb_config dtb;
    cm_memory_range_config_array flash_drive;
    cm_tlb_config tlb;
    cm_clint_config clint;
    cm_htif_config htif;
    cm_cmio_config cmio;
    cm_uarch_config uarch;
} cm_machine_config;
/// \brief Concurrency runtime configuration
typedef struct { // NOLINT(modernize-use-using)
    uint64_t update_merkle_tree;
} cm_concurrency_runtime_config;
/// \brief HTIF runtime configuration
typedef struct { // NOLINT(modernize-use-using)
    bool no_console_putchar;
} cm_htif_runtime_config;
/// \brief Machine runtime configuration
typedef struct { // NOLINT(modernize-use-using)
    cm_concurrency_runtime_config concurrency;
    cm_htif_runtime_config htif;
    bool skip_root_hash_check;
    bool skip_version_check;
} cm_machine_runtime_config;
/// \brief Machine instance handle
/// \details cm_machine* is handle used from C api users
/// to pass the machine object when calling C api functions. Currently,
/// it is merely a pointer to internal C++ object that is  internally casted
/// back to original C++ machine type. On some obscure CPU arhitectures
/// where pointer size depend on types, this api might not work
typedef struct cm_machine_tag cm_machine; // NOLINT(modernize-use-using)
/// \brief Semantic version
typedef struct { // NOLINT(modernize-use-using)
    uint32_t major;
    uint32_t minor;
    uint32_t patch;
    const char *pre_release;
    const char *build;
} cm_semantic_version;
/// \brief Memory range description
typedef struct { // NOLINT(modernize-use-using)
    uint64_t start;
    uint64_t length;
    const char *description;
} cm_memory_range_descr;
/// \brief Memory range description array
typedef struct { // NOLINT(modernize-use-using)
    cm_memory_range_descr *entry;
    size_t count;
} cm_memory_range_descr_array;
// ---------------------------------
// API function definitions
// ---------------------------------

/// \brief Create new machine config with default parameters
/// \returns Pointer to new default config object
/// \details Object acquired from this function must not be changed and
/// must be deleted with cm_delete_machine_config. To make a custom config based
/// on default config user must make a deep copy of returned object members and then
/// customize
CM_API const cm_machine_config *cm_new_default_machine_config(void);
/// \brief Delete machine config acquired from cm_new_default_machine_config
/// \returns void
CM_API void cm_delete_machine_config(const cm_machine_config *config);
/// \brief Create new machine instance from configuration
/// \param config Machine configuration. Must be pointer to valid object
/// \param runtime_config Machine runtime configuration. Must be pointer to valid object
/// \param new_machine Receives the pointer to new machine instance
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_create_machine(const cm_machine_config *config, const cm_machine_runtime_config *runtime_config,
    cm_machine **new_machine, char **err_msg);
/// \brief Create machine instance from previously serialized directory
/// \param dir Directory where previous machine is serialized
/// \param runtime_config Machine runtime configuration. Must be pointer to valid object
/// \param new_machine Receives the pointer to new machine instance
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_load_machine(const char *dir, const cm_machine_runtime_config *runtime_config, cm_machine **new_machine,
    char **err_msg);
/// \brief Serialize entire state to directory
/// \param m Pointer to valid machine instance
/// \param dir Directory where the machine will be serialized
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \details The method changes machine because it updates the root hash
/// \returns 0 for success, non zero code for error
CM_API int cm_store(cm_machine *m, const char *dir, char **err_msg);
/// \brief Deletes machine instance
/// \param m Valid pointer to the existing machine instance
CM_API void cm_delete_machine(cm_machine *m);
/// \brief Deletes the error message
/// \param err_msg Pointer to error message received from some other function
/// \details This C API is meant to be used for various language bindings.
/// Many of them could not directly call C free function,
/// so this is a convenience function for cleanup of error messages
CM_API void cm_delete_cstring(const char *err_msg);