machine-bindings/cartesi-machine-sys/src/bindings.rs

#[doc = " \\brief HTIF runtime configuration"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cm_htif_runtime_config {
    pub no_console_putchar: bool,
}
#[test]
fn bindgen_test_layout_cm_htif_runtime_config() {
    const UNINIT: ::std::mem::MaybeUninit<cm_htif_runtime_config> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cm_htif_runtime_config>(),
        1usize,
        concat!("Size of: ", stringify!(cm_htif_runtime_config))
    );
    assert_eq!(
        ::std::mem::align_of::<cm_htif_runtime_config>(),
        1usize,
        concat!("Alignment of ", stringify!(cm_htif_runtime_config))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).no_console_putchar) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_htif_runtime_config),
            "::",
            stringify!(no_console_putchar)
        )
    );
}
#[doc = " \\brief Machine runtime configuration"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cm_machine_runtime_config {
    pub concurrency: cm_concurrency_runtime_config,
    pub htif: cm_htif_runtime_config,
    pub skip_root_hash_check: bool,
    pub skip_version_check: bool,
}
#[test]
fn bindgen_test_layout_cm_machine_runtime_config() {
    const UNINIT: ::std::mem::MaybeUninit<cm_machine_runtime_config> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cm_machine_runtime_config>(),
        16usize,
        concat!("Size of: ", stringify!(cm_machine_runtime_config))
    );
    assert_eq!(
        ::std::mem::align_of::<cm_machine_runtime_config>(),
        8usize,
        concat!("Alignment of ", stringify!(cm_machine_runtime_config))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).concurrency) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_machine_runtime_config),
            "::",
            stringify!(concurrency)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).htif) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_machine_runtime_config),
            "::",
            stringify!(htif)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).skip_root_hash_check) as usize - ptr as usize },
        9usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_machine_runtime_config),
            "::",
            stringify!(skip_root_hash_check)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).skip_version_check) as usize - ptr as usize },
        10usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_machine_runtime_config),
            "::",
            stringify!(skip_version_check)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cm_machine_tag {
    _unused: [u8; 0],
}
#[doc = " \\brief Machine instance handle\n \\details cm_machine* is handle used from C api users\n to pass the machine object when calling C api functions. Currently,\n it is merely a pointer to internal C++ object that is  internally casted\n back to original C++ machine type. On some obscure CPU arhitectures\n where pointer size depend on types, this api might not work"]
pub type cm_machine = cm_machine_tag;
#[doc = " \\brief Semantic version"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cm_semantic_version {
    pub major: u32,
    pub minor: u32,
    pub patch: u32,
    pub pre_release: *const ::std::os::raw::c_char,
    pub build: *const ::std::os::raw::c_char,
}
#[test]
fn bindgen_test_layout_cm_semantic_version() {
    const UNINIT: ::std::mem::MaybeUninit<cm_semantic_version> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cm_semantic_version>(),
        32usize,
        concat!("Size of: ", stringify!(cm_semantic_version))
    );
    assert_eq!(
        ::std::mem::align_of::<cm_semantic_version>(),
        8usize,
        concat!("Alignment of ", stringify!(cm_semantic_version))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).major) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_semantic_version),
            "::",
            stringify!(major)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).minor) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_semantic_version),
            "::",
            stringify!(minor)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).patch) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_semantic_version),
            "::",
            stringify!(patch)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).pre_release) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_semantic_version),
            "::",
            stringify!(pre_release)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).build) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_semantic_version),
            "::",
            stringify!(build)
        )
    );
}
#[doc = " \\brief Memory range description"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cm_memory_range_descr {
    pub start: u64,
    pub length: u64,
    pub description: *const ::std::os::raw::c_char,
}
#[test]
fn bindgen_test_layout_cm_memory_range_descr() {
    const UNINIT: ::std::mem::MaybeUninit<cm_memory_range_descr> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cm_memory_range_descr>(),
        24usize,
        concat!("Size of: ", stringify!(cm_memory_range_descr))
    );
    assert_eq!(
        ::std::mem::align_of::<cm_memory_range_descr>(),
        8usize,
        concat!("Alignment of ", stringify!(cm_memory_range_descr))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).start) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_memory_range_descr),
            "::",
            stringify!(start)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).length) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_memory_range_descr),
            "::",
            stringify!(length)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).description) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_memory_range_descr),
            "::",
            stringify!(description)
        )
    );
}
#[doc = " \\brief Memory range description array"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cm_memory_range_descr_array {
    pub entry: *mut cm_memory_range_descr,
    pub count: usize,
}
#[test]
fn bindgen_test_layout_cm_memory_range_descr_array() {
    const UNINIT: ::std::mem::MaybeUninit<cm_memory_range_descr_array> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cm_memory_range_descr_array>(),
        16usize,
        concat!("Size of: ", stringify!(cm_memory_range_descr_array))
    );
    assert_eq!(
        ::std::mem::align_of::<cm_memory_range_descr_array>(),
        8usize,
        concat!("Alignment of ", stringify!(cm_memory_range_descr_array))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).entry) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_memory_range_descr_array),
            "::",
            stringify!(entry)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).count) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_memory_range_descr_array),
            "::",
            stringify!(count)
        )
    );
}
extern "C" {
    #[doc = " \\brief Create new machine config with default parameters\n \\returns Pointer to new default config object\n \\details Object acquired from this function must not be changed and\n must be deleted with cm_delete_machine_config. To make a custom config based\n on default config user must make a deep copy of returned object members and then\n customize"]
    pub fn cm_new_default_machine_config() -> *const cm_machine_config;
}
extern "C" {
    #[doc = " \\brief Delete machine config acquired from cm_new_default_machine_config\n \\returns void"]
    pub fn cm_delete_machine_config(config: *const cm_machine_config);
}
extern "C" {
    #[doc = " \\brief Create new machine instance from configuration\n \\param config Machine configuration. Must be pointer to valid object\n \\param runtime_config Machine runtime configuration. Must be pointer to valid object\n \\param new_machine Receives the pointer to new machine instance\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_create_machine(
        config: *const cm_machine_config,
        runtime_config: *const cm_machine_runtime_config,
        new_machine: *mut *mut cm_machine,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Create machine instance from previously serialized directory\n \\param dir Directory where previous machine is serialized\n \\param runtime_config Machine runtime configuration. Must be pointer to valid object\n \\param new_machine Receives the pointer to new machine instance\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_load_machine(
        dir: *const ::std::os::raw::c_char,
        runtime_config: *const cm_machine_runtime_config,
        new_machine: *mut *mut cm_machine,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Serialize entire state to directory\n \\param m Pointer to valid machine instance\n \\param dir Directory where the machine will be serialized\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\details The method changes machine because it updates the root hash\n \\returns 0 for success, non zero code for error"]
    pub fn cm_store(
        m: *mut cm_machine,
        dir: *const ::std::os::raw::c_char,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Deletes machine instance\n \\param m Valid pointer to the existing machine instance"]
    pub fn cm_delete_machine(m: *mut cm_machine);
}
